[tool.poetry]
name = "flyte_workflow_orchestration_demo"
version = "0.1.0"
description = ""
authors = ["Ulrich Ludmann <ul@kakadu-labs.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
flytekit = "^1.10.7"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
scikit-learn = "^1.4.1.post1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
